# evals-101

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
.cursor/rules/: agent-handoff-default.mdc
datasets/gate/: skills_201_workflow_routing.json  workflow_routing.json
datasets/nightly/: skills_201_tool_use.json  tool_use.json
docs/: mcp-201-baseline.md
evals_101/: __init__.py  api.py  cli.py  contracts.py  deepeval_runner.py  graders.py  mcp_client.py  report_html.py  reporting.py  run_manager.py  runners.py  runtime.py
scripts/: deploy_docker.sh  run_gate.sh  run_nightly.sh  run_service.sh  run_tests.sh  setup_local.sh
tests/: test_graders.py  test_run_manager.py  test_runtime_integration.py  test_runtime_settings.py
